--- a/themes/pucechan/layout/includes/_partial/footer.pug
+++ b/themes/pucechan/layout/includes/_partial/footer.pug
@@ -2,6 +2,10 @@ footer
     .container
         .row
             div(class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1")
+                p(class="text-muted")
+                    a(href="/atom.xml")
+                        div
+                            img(src="/img/feed.png" alt="Feed Link")
                 p(class="copyright text-muted")= "Theme by "
                     strong= "Pucechan "
                     |- Inspired by 
