Removed the time from posts as it was incorrectly putting the current time on all historical posts as well.

--- a/themes/pucechan/layout/post.pug
+++ b/themes/pucechan/layout/post.pug
@@ -10,8 +10,7 @@ block content
                     |By 
                     =config.author
                 span(class="date-time info")
-                    span.date= date(page.date) + ' - '
-                    span.time= time(page.time)
+                    span.date= date(page.date)
                 if (page.categories && page.categories.length)
                     span(class="categories info")
                         |Under 
