--- a/themes/pucechan/layout/post.pug
+++ b/themes/pucechan/layout/post.pug
@@ -10,7 +10,7 @@ block content
                     |By 
                     =config.author
                 span(class="date-time info")
-                    span.date= date(page.date)
+                    span.date= full_date(page.date)
                 if (page.categories && page.categories.length)
                     span(class="categories info")
                         |Under 
