--- a/themes/pucechan/source/css/pucechan.styl
+++ b/themes/pucechan/source/css/pucechan.styl
@@ -1,9 +1,9 @@
 /* Baseline Colours */
 
 /* basic */
-$colour-white = #f2edf3
-$colour-beige = #F0E8DF
-$colour-black = #3f3f3f
+$colour-white = #2a2a29
+$colour-beige = #191919
+$colour-black = #f0e7d5
 
 /* theme */
 $dark-red    = #E80C1C
@@ -17,8 +17,8 @@ $theme-colour            = $dark-purple
 $theme-text-colour       = $colour-black
 $theme-background        = $colour-white
 $theme-code-background   = $colour-beige
-$theme-seperator         = $colour-black
-$theme-dotted-seperator  = $colour-black
+$theme-seperator         = $dark-purple
+$theme-dotted-seperator  = $dark-purple
 
 $body-font               = 'Open Sans', sans-serif
 $post-font               = 'Open Sans', sans-serif
