Changes to Theme and Monster Hunter Article

--- a/themes/pucechan/layout/includes/_partial/header.pug
+++ b/themes/pucechan/layout/includes/_partial/header.pug
@@ -42,3 +42,5 @@ header(class=headerClass style=headerStyle)
                         each val, i in theme.menu
                             li
                                 a(href=val ? url_for(val) : url_for(val))=i
+                        li
+                            <script type='text/javascript' src='https://ko-fi.com/widgets/widget_2.js'></script><script type='text/javascript'>kofiwidget2.init('Buy Me a Coffee', '#855E8C', 'V7V3A64O');kofiwidget2.draw();</script>
