Updated Theme Colours

--- a/themes/pucechan/source/css/_base.styl
+++ b/themes/pucechan/source/css/_base.styl
@@ -13,10 +13,12 @@ a
         transition all .25s
         cursor pointer
 
-
 strong
-    color $theme-text-colour
+    color $colour-white
+
+em, i
+    color $colour-white
 
 h1, h2, h3, h4, h5, h6
     font-family $header-font
-    color $theme-text-colour
+    color $colour-white
