--- a/themes/pucechan/source/css/_partial/header.styl
+++ b/themes/pucechan/source/css/_partial/header.styl
@@ -33,7 +33,7 @@
     text-align center
 
     h1
-      color $colour-black
+      color $colour-white
 
   .title
     font-size remify(36px)
@@ -43,7 +43,7 @@
   text-align right
   margin-top remify(10px)
   padding-top remify(12px)
-  text-shadow 1px 1px 1px $colour-black
+  text-shadow 1px 1px 1px $theme-colour
   ul
     margin 0 auto
     padding 0
@@ -53,10 +53,10 @@
       &:last-child
         margin-right 0
       > a
-        color $colour-black
+        color $colour-white
         padding remify(3px) remify(10px)
         border-radius remify(2px)
 
   &.with-background
     a
-      color $colour-black
+      color $colour-white
