--- a/themes/pucechan/source/css/_partial/index-entry.styl
+++ b/themes/pucechan/source/css/_partial/index-entry.styl
@@ -38,7 +38,7 @@
     .date, .categories
         padding remify(2px) 0
     .date
-        color $theme-colour
+        color $colour-white
   .categories
       color-revert()
       > a
