--- a/themes/pucechan/source/css/pucechan.styl
+++ b/themes/pucechan/source/css/pucechan.styl
@@ -1,9 +1,12 @@
 /* Baseline Colours */
 
 /* basic */
-$colour-white = #2a2a29
+/* $colour-white = #2a2a29 */
+$colour-bg = #292D31
 $colour-beige = #191919
-$colour-black = #f0e7d5
+/* $colour-black = #f0e7d5 */
+$colour-text = #A9B1BA
+$colour-white = #FFFFFF
 
 /* theme */
 $dark-red    = #E80C1C
@@ -14,8 +17,8 @@ $dark-blue   = #1999EC
 $dark-purple = #855E8C
 
 $theme-colour            = $dark-purple
-$theme-text-colour       = $colour-black
-$theme-background        = $colour-white
+$theme-text-colour       = $colour-text
+$theme-background        = $colour-bg
 $theme-code-background   = $colour-beige
 $theme-seperator         = $dark-purple
 $theme-dotted-seperator  = $dark-purple
